--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,17 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "package.json", "use": "@vercel/next" }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
+    "version": 2,
+    "builds": [
+      { "src": "pages/api/*.js", "use": "@vercel/next" },
+      { "src": "index.html", "use": "@vercel/static" }
+    ],
+    "routes": [
+      { "src": "/api/(.*)", "dest": "/pages/api/$1.js",
       "headers": {
         "Access-Control-Allow-Origin": "*",
         "Access-Control-Allow-Methods": "GET, OPTIONS",
         "Access-Control-Allow-Headers": "Content-Type"
       }
-    }
-  ]
-}
+      }
+    ]
+  }
+  
