--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,18 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "pages/api/*.js", "use": "@vercel/next" },
-      { "src": "index.html", "use": "@vercel/static" }
-    ],
-    "routes": [
-      { "src": "/api/(.*)", "dest": "/pages/api/$1.js",
-      "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Methods": "GET, OPTIONS",
-        "Access-Control-Allow-Headers": "Content-Type"
-      }
-      }
-    ]
-  }
-  
+  "version": 2,
+  "builds": [
+    { "src": "pages/api/*.js", "use": "@vercel/node" },
+    { "src": "**/*.html", "use": "@vercel/static" },
+    { "src": "**/*.js", "use": "@vercel/static" },
+    { "src": "**/*.css", "use": "@vercel/static" },
+    { "src": "**/*.json", "use": "@vercel/static" },
+    { "src": "**/*.png", "use": "@vercel/static" },
+    { "src": "**/*.jpg", "use": "@vercel/static" },
+    { "src": "**/*.svg", "use": "@vercel/static" }
+  ],
+  "routes": [
+    { "src": "/api/fetchPublications", "dest": "/pages/api/fetchPublications.js" },
+    { "handle": "filesystem" },
+    { "src": "/(.*)", "dest": "/$1" }
+  ]
+}
