--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,11 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "pages/api/*.js", "use": "@vercel/node" },
-    { "src": "**/*.html", "use": "@vercel/static" },
-    { "src": "**/*.js", "use": "@vercel/static" },
-    { "src": "**/*.css", "use": "@vercel/static" },
-    { "src": "**/*.json", "use": "@vercel/static" },
-    { "src": "**/*.png", "use": "@vercel/static" },
-    { "src": "**/*.jpg", "use": "@vercel/static" },
-    { "src": "**/*.svg", "use": "@vercel/static" }
-  ],
-  "routes": [
-    { "src": "/api/fetchPublications", "dest": "/pages/api/fetchPublications.js" },
-    { "handle": "filesystem" },
-    { "src": "/(.*)", "dest": "/$1" }
-  ]
-}
+    "version": 2,
+    "builds": [
+      { "src": "pages/api/*.js", "use": "@vercel/node" },
+      { "src": "index.html", "use": "@vercel/static" }
+    ],
+    "routes": [
+      { "src": "/api/(.*)", "dest": "/pages/api/$1.js" }
+    ]
+  }
+  
